--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: Ezhuthani
 email: akhilapadmanaban@gmail.com
 description: An Ambivert's Pen
-url: http://Akhilagp.github.io
+url: http://testfundo.github.io/ezhuthani
 keywords: ["blog", "jekyll"]
 
 #
